--- a/packages/veloui/package.json
+++ b/packages/veloui/package.json
@@ -17,5 +17,12 @@
   "author": "秃头披风侠",
   "license": "MIT",
   "description": "",
-  "typings": "lib/index.d.ts"
+  "typings": "lib/index.d.ts",
+  "scripts": {
+    "release": "release-it"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aojunhao123/Vue3-TS-UI.git"
+  }
 }
