--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
+    "release-it": "^16.1.3",
     "sass": "^1.64.0",
     "sucrase": "^3.34.0",
     "typescript": "^5.1.6",
