--- a/packages/veloui/package.json
+++ b/packages/veloui/package.json
@@ -23,6 +23,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aojunhao123/Vue3-TS-UI.git"
+    "url": "https://github.com/aojunhao123/Velo"
   }
 }
