--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "docs:dev": "pnpm run --filter site docs:dev",
     "docs:build": "pnpm run --filter site docs:build",
     "docs:preview": "pnpm run --filter site docs:preview",
-    "velo:dev": "pnpm run --filter play dev"
+    "velo:dev": "pnpm run --filter play dev",
+    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./"
   },
   "keywords": [],
   "author": "",
@@ -20,11 +21,18 @@
     "@types/gulp-autoprefixer": "^0.0.34",
     "@types/gulp-sass": "^5.0.1",
     "@types/node": "^20.4.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/runtime-core": "^3.3.4",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.15.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
+    "prettier": "^3.0.0",
     "release-it": "^16.1.3",
     "sass": "^1.64.0",
     "sucrase": "^3.34.0",
