--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:velo": "gulp -f packages/components/script/build/index.ts",
     "publish:velo": "gulp -f packages/components/script/publish/index.ts",
     "docs:dev": "pnpm run --filter site docs:dev",
     "docs:build": "pnpm run --filter site docs:build",
     "docs:preview": "pnpm run --filter site docs:preview",
     "velo:dev": "pnpm run --filter play dev",
-    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./"
+    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
+    "lint:style": "stylelint --fix \"packages/components/src/**/*.{css,scss}\""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,8 @@
     "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/runtime-core": "^3.3.4",
+    "@vue/test-utils": "^2.4.1",
+    "c8": "^8.0.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -32,14 +34,24 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
+    "happy-dom": "^10.5.2",
+    "postcss-html": "^1.5.0",
     "prettier": "^3.0.0",
     "release-it": "^16.1.3",
     "sass": "^1.64.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-prettier": "^4.0.0",
     "sucrase": "^3.34.0",
     "typescript": "^5.1.6",
     "unplugin-vue-define-options": "^1.3.11",
     "vite": "^4.4.5",
     "vite-plugin-dts": "1.4.1",
+    "vitest": "^0.33.0",
     "vue": "^3.2.36"
   }
 }
