--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
     "happy-dom": "^10.5.2",
+    "husky": "^8.0.3",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.0",
     "release-it": "^16.1.3",
